# linux-ftools

./: .hgignore  Makefile.am  Makefile.in  RELEASE  configure  configure.ac  fadvise.c  fallocate.c  fincore.c  linux-ftools.h  make  waste_memory.c
debian/: changelog
python-ftools/: LICENSE  README  ftools-examples.py  ftools.c  setup.py  test-fallocate.py
python-ftools/scripts/: pages_by_time  python_fadvise  python_fincore  report_filechanges
src/c/: fadvise.c  fallocate.c  fincore.c
